--- a/packages/docs/src/docs.css
+++ b/packages/docs/src/docs.css
@@ -46,7 +46,7 @@ body {
 
 .docs-logo {
   view-transition-name: docs-logo;
-  
+
   svg {
     fill: var(--jazz-text-color);
     height: auto;
@@ -156,7 +156,11 @@ html[data-theme="system"] .theme-toggle [data-scheme="system"] {
 }
 
 .docs-layout-wide {
-  grid-template-columns: var(--sidebar-w) 1fr;
+  grid-template-columns: 1fr;
+
+  @media (width > 769px) {
+    grid-template-columns: var(--sidebar-w) 1fr;
+  }
 
   .docs-content {
     width: 100%;
@@ -176,6 +180,7 @@ html[data-theme="system"] .theme-toggle [data-scheme="system"] {
   translate: -100% 0;
   transition: translate 300ms var(--ease-glide);
   overflow-y: auto;
+  overflow-x: clip;
   overscroll-behavior: contain;
   border-right: 1px solid var(--border);
   padding-block: 1rem;
